--- a/MainGame/MainGame.csproj
+++ b/MainGame/MainGame.csproj
@@ -74,6 +74,12 @@
       <DependentUpon>QuitForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Screenshot.cs" />
+    <Compile Include="ThanksForPlaying.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThanksForPlaying.Designer.cs">
+      <DependentUpon>ThanksForPlaying.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GoodJobForm.resx">
       <DependentUpon>GoodJobForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +98,9 @@
     </Compile>
     <EmbeddedResource Include="QuitForm.resx">
       <DependentUpon>QuitForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThanksForPlaying.resx">
+      <DependentUpon>ThanksForPlaying.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -195,6 +204,9 @@
       <Project>{1fb03857-dc55-4290-828a-bb67dee59825}</Project>
       <Name>Users_and_Security</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Thanks_for_playing.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
