Fixed LogIn and SignUp with exception handling

--- a/SQLLogic/SQLLogic.csproj
+++ b/SQLLogic/SQLLogic.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Users_and_Security\Users_and_Security.csproj" />
+  </ItemGroup>
+
 </Project>
