--- a/LogInScreen/LogInScreen.csproj
+++ b/LogInScreen/LogInScreen.csproj
@@ -125,6 +125,10 @@
       <Project>{1037b9bb-5f93-4770-8f64-c1283f9e3231}</Project>
       <Name>SignUpScreen</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SQLLogic\SQLLogic.csproj">
+      <Project>{aa241287-38cb-4eb6-9e9c-88a7ee49937e}</Project>
+      <Name>SQLLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Users_and_Security\Users_and_Security.csproj">
       <Project>{1fb03857-dc55-4290-828a-bb67dee59825}</Project>
       <Name>Users_and_Security</Name>
