--- a/SignUpScreen/SignUpScreen.csproj
+++ b/SignUpScreen/SignUpScreen.csproj
@@ -111,6 +111,10 @@
     <None Include="Resources\X2.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SQLLogic\SQLLogic.csproj">
+      <Project>{aa241287-38cb-4eb6-9e9c-88a7ee49937e}</Project>
+      <Name>SQLLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Users_and_Security\Users_and_Security.csproj">
       <Project>{1fb03857-dc55-4290-828a-bb67dee59825}</Project>
       <Name>Users_and_Security</Name>
