--- a/CustomWindowsForms/CustomWindowsForms.csproj
+++ b/CustomWindowsForms/CustomWindowsForms.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NoInternet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoInternet.Designer.cs">
+      <DependentUpon>NoInternet.cs</DependentUpon>
+    </Compile>
     <Compile Include="PleaseWait.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,12 +60,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TryAgain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TryAgain.Designer.cs">
+      <DependentUpon>TryAgain.cs</DependentUpon>
+    </Compile>
     <Compile Include="WrongUserOrPass.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="WrongUserOrPass.Designer.cs">
       <DependentUpon>WrongUserOrPass.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="NoInternet.resx">
+      <DependentUpon>NoInternet.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PleaseWait.resx">
       <DependentUpon>PleaseWait.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +88,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TryAgain.resx">
+      <DependentUpon>TryAgain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WrongUserOrPass.resx">
       <DependentUpon>WrongUserOrPass.cs</DependentUpon>
     </EmbeddedResource>
