--- a/LogInScreen/LogInScreen.csproj
+++ b/LogInScreen/LogInScreen.csproj
@@ -142,5 +142,8 @@
   <ItemGroup>
     <None Include="Resources\Logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PngMindTwister.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
