--- a/MainGame/MainGame.csproj
+++ b/MainGame/MainGame.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BetterLuck.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BetterLuck.Designer.cs">
+      <DependentUpon>BetterLuck.cs</DependentUpon>
+    </Compile>
     <Compile Include="BitmapFilter.cs" />
     <Compile Include="BlurFunctions.cs" />
     <Compile Include="Clock.cs" />
@@ -94,6 +100,9 @@
     <Compile Include="ThanksForPlaying.Designer.cs">
       <DependentUpon>ThanksForPlaying.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BetterLuck.resx">
+      <DependentUpon>BetterLuck.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GoodJobForm.resx">
       <DependentUpon>GoodJobForm.cs</DependentUpon>
     </EmbeddedResource>
